--- a/src/frontend/devops-gitci/package.json
+++ b/src/frontend/devops-gitci/package.json
@@ -57,7 +57,7 @@
     "sockjs-client": "^1.3.0",
     "stompjs": "^2.3.3",
     "vue-echarts": "^3.0.9",
-    "vue": "~2.5.22",
+    "vue": "2.6.12",
     "vue-router": "~3.0.6",
     "vuex": "~3.1.1",
     "xterm": "^3.1.0",
