--- a/src/frontend/devops-gitci/package.json
+++ b/src/frontend/devops-gitci/package.json
@@ -141,7 +141,7 @@
     "url-loader": "~1.1.2",
     "vue-loader": "~15.7.0",
     "vue-markdown-loader": "~2.4.1",
-    "vue-template-compiler": "~2.5.22",
+    "vue-template-compiler": "2.6.12",
     "webpack": "~4.32.2",
     "webpack-bundle-analyzer": "~3.3.2",
     "webpack-cli": "~3.3.2",
