--story=868297529 chore: 为BK-CI的前端开启Stream

--- a/.ci/frontend_mr.yml
+++ b/.ci/frontend_mr.yml
@@ -1,43 +1,32 @@
 version: "v2.0"
-name: "BK-CI前端MR代码检查"
+name: "前端MR代码检查"
 
 on:
   mr: [ frontend-integration ]
 
-steps:
-- checkout: self
-- uses: CodeccCheckAtomDebug@4.*
-  id: codecc
-  with:
-    languages:
-    - "JS"           
-    languageRuleSetMap:
-      JS_RULE:
-      - "js_eslint_sec"
-    newDefectJudgeFromDate: "2021-06-03"
-    path:
-    - "src/frontend"
-    customPath:
-    - "sfisfoisifairwinsun"
-    - ".*/.*\\.svg"
-    - ".*/static/lib\\.bundle\\.js"
-    - "yarn.lock"
-    - "src/frontend/devops-codecc"
-    
-- uses: jsParser@2.*
-  with:
-    code: |
-        const fs = require('fs')
-        fs.readFile('${{ steps.codecc.outputs.reportCallBack }}', 'utf8' , (err, data) => {
-          if (err) {
-            console.error(err)
-            return
-          }
-          dataObj = JSON.parse(data)
-          dataObj.tool_snapshot_list.forEach((item) => {
-            if(item.tool_name_en == "ESLINT" && (item.total_serious > 0 || item.total_normal > 0 )){
-              console.log(item)
-              throw new Error('eslint err')
-            }
-          });
-        })
+stages:
+- name: check
+  check-out:
+    gates:
+      - template: frontend.yml
+  jobs:
+    job1:
+      runs-on: docker
+      steps:
+      - checkout: self
+      - uses: CodeccCheckAtomDebug@4.*
+        with:
+          languages:
+          - "JS"           
+          languageRuleSetMap:
+            JS_RULE:
+            - "js_eslint_sec"
+          newDefectJudgeFromDate: "2021-06-03"
+          path:
+          - "src/frontend"
+          customPath:
+          - "sfisfoisifairwinsun"
+          - ".*/.*\\.svg"
+          - ".*/static/lib\\.bundle\\.js"
+          - "yarn.lock"
+          - "src/frontend/devops-codecc"
