--story=868297529 chore: 为BK-CI的前端开启Stream 增加notice

--- a/.ci/frontend_mr.yml
+++ b/.ci/frontend_mr.yml
@@ -30,3 +30,6 @@ stages:
           - ".*/static/lib\\.bundle\\.js"
           - "yarn.lock"
           - "src/frontend/devops-codecc"
+
+notices:
+- type: wework-message
