--- a/.ci/backend.yml
+++ b/.ci/backend.yml
@@ -63,6 +63,9 @@ stages:
           mysqlUser: root
           mysqlPasswd: root
         run: | 
+          ls -l /;
+          ls -l /root/;
+          ls -l /root/.gradle/;
           cd src/backend/ci/ext/tencent
           ../../gradlew -DmysqlURL=$mysqlURL \
                         -DmysqlUser=$mysqlUser \
