--- a/src/frontend/devops-atomstore/package.json
+++ b/src/frontend/devops-atomstore/package.json
@@ -40,7 +40,8 @@
     "expose-loader": "^0.7.5",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
-    "mini-css-extract-plugin": "^0.4.0",    
+    "mini-css-extract-plugin": "^0.4.0",
+    "sass": "^1.41.0",
     "sass-loader": "^7.0.1",
     "style-loader": "^0.23.1",
     "terser-webpack-plugin": "^1.3.0",
