--- a/src/frontend/devops-environment/package.json
+++ b/src/frontend/devops-environment/package.json
@@ -42,6 +42,7 @@
     "expose-loader": "^0.7.5",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.0",
+    "sass": "^1.41.0",
     "sass-loader": "^7.0.1",
     "terser-webpack-plugin": "^1.3.0",
     "url-loader": "^1.0.1",
