--- a/src/frontend/devops-gitci/package.json
+++ b/src/frontend/devops-gitci/package.json
@@ -129,6 +129,7 @@
     "postcss-property-lookup": "~2.0.0",
     "postcss-url": "~8.0.0",
     "rimraf": "~2.6.3",
+    "sass": "^1.41.0",
     "semver": "~6.1.0",
     "shelljs": "~0.8.3",
     "terser-webpack-plugin": "~1.2.4",
