--- a/src/frontend/devops-nav/package.json
+++ b/src/frontend/devops-nav/package.json
@@ -53,7 +53,7 @@
     "imports-loader": "^0.8.0",
     "inline-chunk-manifest-html-webpack-plugin": "^2.0.0",
     "mini-css-extract-plugin": "^0.2.0",
-    "node-sass": "^4.9.4",
+    "sass": "^1.41.0",
     "sass-loader": "^6.0.7",
     "script-ext-html-webpack-plugin": "^1.8.8",
     "source-map-loader": "^0.2.3",
