--- a/src/frontend/devops-pipeline/package.json
+++ b/src/frontend/devops-pipeline/package.json
@@ -97,6 +97,7 @@
     "resolve-url-loader": "^3.0.0",
     "rider": "^2.0.0",
     "rimraf": "^2.6.2",
+    "sass": "^1.41.0",
     "sass-loader": "^7.1.0",
     "semver": "^5.4.1",
     "shelljs": "^0.7.8",
