--- a/src/frontend/devops-quality/package.json
+++ b/src/frontend/devops-quality/package.json
@@ -34,6 +34,7 @@
     "html-webpack-plugin": "^3.2.0",
     "husky": "^1.2.0",
     "mini-css-extract-plugin": "^0.4.0",
+    "sass": "^1.41.0",
     "sass-loader": "^7.0.1",
     "url-loader": "^1.0.1",
     "validate-commit-msg": "^2.14.0",
