--- a/src/frontend/devops-turbo/package.json
+++ b/src/frontend/devops-turbo/package.json
@@ -20,7 +20,6 @@
     "cross-env": "^5.1.4",
     "css-loader": "^0.28.11",
     "eslint": "^7.3.1",
-    "eslint-plugin-vue": "^6.2.2",
     "eslint-config-standard": "~12.0.0",
     "eslint-friendly-formatter": "~4.0.1",
     "eslint-loader": "~2.1.2",
@@ -28,10 +27,12 @@
     "eslint-plugin-node": "^8.0.1",
     "eslint-plugin-promise": "~4.1.1",
     "eslint-plugin-standard": "~4.0.0",
+    "eslint-plugin-vue": "^6.2.2",
     "expose-loader": "^0.7.5",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.0",
+    "sass": "^1.41.0",
     "sass-loader": "^7.0.1",
     "style-loader": "^0.23.1",
     "terser-webpack-plugin": "^1.3.0",
