--- a/.ci/frontend_dev.yml
+++ b/.ci/frontend_dev.yml
@@ -7,7 +7,7 @@ variables:
   ips: "11.185.144.156,9.4.20.15"
 
 on:
-  push: frontend-develop
+  push: ["frontend-develop"]
 
 stages:
 - name: "Build"
@@ -25,11 +25,29 @@ stages:
           branchName: "integration"
           localPath: "devops-config"
         checkout: "http://git.code.oa.com/bkdevops/devops-config.git"
+      - uses: calculatehash@1.*
+        id: calculate
+        with:
+          file_path: src/frontend/package.json
+          calculate_func: md5
+      - uses: cache@1.*
+        id: cache
+        with:
+          cacheKey: "nodejstesa_linux_${{ steps.calculate.outputs.hash_value }}"
+          cachePaths: "src/frontend/node_modules"
+          restoreKeys: "nodejstesa_linux_"
+      - run: |
+            yarn
+        if: steps.cache.outputs.cacheHit == false
       - name: "Bash"
         run: |
           cd src/frontend
-          npm install -g lerna
-          yarn start
+          if [ ${{ steps.cache.outputs.cacheHit }} == 'false' ]
+          then
+            yarn
+          else
+            echo "package.json has not changed"
+          fi
           yarn public -e dev -t tencent -s ${{ variables.modules }}
 
           cd ./frontend/ || exit 1
@@ -49,9 +67,10 @@ stages:
           cd ${{ ci.workspace }}/ci/frontend/
           zip -r frontend.zip ./* && cp frontend.zip ${{ ci.workspace }}
       - name: "Upload"
-        uses: "UploadArtifactory@2.*"
+        uses: "UploadArtifactory@1.*"
         with:
           filePath: "frontend.zip"
+          # repoName: "pipeline"
 - name: "Deploy"
   label:
   - "Deploy"
