--- a/.ci/frontend_test.yml
+++ b/.ci/frontend_test.yml
@@ -6,7 +6,7 @@ variables:
   # 9.134.78.69,10.123.135.151,9.66.32.218
 
 on:
-  # push: ["test"]
+  push: ["frontend-master"]
   schedules:
     cron: 0 * * * *
     branches: [ "test" ]
