--- a/.ci/frontend_test.yml
+++ b/.ci/frontend_test.yml
@@ -6,6 +6,7 @@ variables:
   # 9.134.78.69,10.123.135.151,9.66.32.218
 
 on:
+  push: ["frontend-master"]
   schedules:
     cron: 0 * * * *
     branches: [ "test" ]
@@ -19,7 +20,7 @@ stages:
       name: "构建环境-LINUX"
       runs-on: docker
       steps:
-      - uses: checkout@1.*
+      - checkout: "http://git.code.oa.com/bkdevops/bk-ci.git"
         name: Checkout
         with:
           refName: test
