--- a/.ci/frontend_test.yml
+++ b/.ci/frontend_test.yml
@@ -49,6 +49,9 @@ stages:
           else
             echo "package.json has not changed"
           fi
+          ls
+          chmod -R 777 ./node_modules
+          ls -l
           yarn public -e test -l v2 -t tencent
 
           cd ./frontend/ || exit 1
