--- a/.ci/frontend_test.yml
+++ b/.ci/frontend_test.yml
@@ -42,6 +42,7 @@ stages:
           cachePaths: "src/frontend/node_modules"
           restoreKeys: "nodejstesa_linux_"
       - run: |
+          yarn global add lerna
           cd src/frontend
           if [ ${{ steps.cache.outputs.cacheHit }} == 'false' ]
           then
