modify test yml

--- a/.ci/frontend_test.yml
+++ b/.ci/frontend_test.yml
@@ -50,9 +50,11 @@ stages:
           else
             echo "package.json has not changed"
           fi
-          
+          ls -l
+          ls -l ./node_modules/.bin
           chmod -R 777 ./node_modules
           lerna -v
+          which lerna
           yarn public -e test -l v2 -t tencent
 
           cd ./frontend/ || exit 1
