--- a/.ci/frontend_test.yml
+++ b/.ci/frontend_test.yml
@@ -29,32 +29,27 @@ stages:
           branchName: "integration"
           localPath: "devops-config"
         checkout: "http://git.code.oa.com/bkdevops/devops-config.git"
-      # - uses: calculatehash@1.*
-      #   id: calculate
-      #   with:
-      #     file_path: src/frontend/package.json
-      #     calculate_func: md5
-      # - uses: cache@1.*
-      #   id: cache
-      #   with:
-      #     cacheKey: "nodejstesa_linux_${{ steps.calculate.outputs.hash_value }}"
-      #     cachePaths: "src/frontend/node_modules"
-      #     restoreKeys: "nodejstesa_linux_"
+      - uses: calculatehash@1.*
+        id: calculate
+        with:
+          file_path: src/frontend/package.json
+          calculate_func: md5
+      - uses: cache@1.*
+        id: cache
+        with:
+          cacheKey: "bk_ci_frontend_${{ steps.calculate.outputs.hash_value }}"
+          cachePaths: "src/frontend/node_modules"
+          restoreKeys: "bk_ci_frontend_"
       - run: |
-          yarn global add lerna
           cd src/frontend
-          # if [ ${{ steps.cache.outputs.cacheHit }} == 'false' ]
-          # then
-          #   yarn
-          # else
-          #   echo "package.json has not changed"
-          # fi
-          yarn
-          ls -l
+          if [ ${{ steps.cache.outputs.cacheHit }} == 'false' ]
+          then
+            yarn
+          else
+            echo "package.json has not changed"
+          fi
           ls -l ./node_modules/.bin
           chmod -R 777 ./node_modules
-          lerna -v
-          which lerna
           yarn public -e test -l v2 -t tencent
 
           cd ./frontend/ || exit 1
