--- a/.ci/frontend_dev.yml
+++ b/.ci/frontend_dev.yml
@@ -7,6 +7,7 @@ variables:
   ips: "11.185.144.156,9.4.20.15"
 
 on:
+  push: ["frontend-master"]
   schedules:
     cron: 0 * * * *
     branches: [ "frontend-develop" ]
@@ -47,6 +48,8 @@ stages:
           else
             echo "package.json has not changed"
           fi
+          ls -l ./node_modules/.bin
+          chmod -R 777 ./node_modules
           yarn public -e dev -t tencent -s ${{ variables.modules }}
 
           cd ./frontend/ || exit 1
