--- a/src/frontend/devops-experience/.babelrc
+++ b/src/frontend/devops-experience/.babelrc
@@ -1,23 +1,66 @@
 {
     "presets": [
         [
-            "env",
+            "@babel/preset-env",
             {
                 "modules": "commonjs",
                 "targets": {
-                    "browsers": ["> 1%", "last 2 versions", "not ie <= 8"]
+                    "browsers": [
+                        "> 1%",
+                        "last 2 versions",
+                        "not ie <= 8"
+                    ]
                 },
                 "debug": false,
                 "useBuiltIns": true
             }
-        ],
-        "stage-2"
+        ]
     ],
-    "plugins": ["transform-runtime", "syntax-dynamic-import", "transform-vue-jsx"],
+    "plugins": [
+        [
+            "@babel/plugin-transform-runtime",
+            {
+                "corejs": 2
+            }
+        ],
+        "@babel/plugin-syntax-dynamic-import",
+        "transform-vue-jsx",
+        "@babel/plugin-syntax-import-meta",
+        "@babel/plugin-proposal-class-properties",
+        "@babel/plugin-proposal-json-strings",
+        [
+            "@babel/plugin-proposal-decorators",
+            {
+                "legacy": true
+            }
+        ],
+        "@babel/plugin-proposal-function-sent",
+        "@babel/plugin-proposal-export-namespace-from",
+        "@babel/plugin-proposal-numeric-separator",
+        "@babel/plugin-proposal-throw-expressions"
+    ],
     "env": {
         "test": {
-            "presets": ["env", "stage-2"],
-            "plugins": ["istanbul"]
+            "presets": [
+                "@babel/preset-env"
+            ],
+            "plugins": [
+                "istanbul",
+                "@babel/plugin-syntax-dynamic-import",
+                "@babel/plugin-syntax-import-meta",
+                "@babel/plugin-proposal-class-properties",
+                "@babel/plugin-proposal-json-strings",
+                [
+                    "@babel/plugin-proposal-decorators",
+                    {
+                        "legacy": true
+                    }
+                ],
+                "@babel/plugin-proposal-function-sent",
+                "@babel/plugin-proposal-export-namespace-from",
+                "@babel/plugin-proposal-numeric-separator",
+                "@babel/plugin-proposal-throw-expressions"
+            ]
         }
     }
 }
