--- a/src/frontend/devops-nav/package.json
+++ b/src/frontend/devops-nav/package.json
@@ -15,6 +15,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^1.9.0",
+    "@typescript-eslint/parser": "^1.9.0",
     "add-asset-html-webpack-plugin": "^2.1.3",
     "copy-webpack-plugin": "^4.5.1",
     "cross-env": "^5.1.4",
@@ -31,7 +33,6 @@
     "exports-loader": "^0.7.0",
     "file-loader": "^1.1.11",
     "fork-ts-checker-webpack-plugin": "^5.0.5",
-    "ghooks": "^2.0.4",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.1.0",
     "imports-loader": "^0.8.0",
@@ -64,7 +65,7 @@
     "js-cookie": "^2.2.0",
     "popper.js": "^1.14.4",
     "vee-validate": "^2.0.9",
-    "vue": "2.6.10",
+    "vue": "2.6.12",
     "vue-class-component": "^6.2.0",
     "vue-i18n": "^8.18.1",
     "vue-property-decorator": "^6.0.0",
