--- a/src/frontend/devops-atomstore/package.json
+++ b/src/frontend/devops-atomstore/package.json
@@ -7,7 +7,8 @@
     "clipboard": "^2.0.4",
     "codemirror": "5.61.0",
     "mavon-editor": "2.7.7",
-    "moment": "^2.18.1"
+    "moment": "^2.18.1",
+    "vue": "2.6.12"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
