--- a/src/frontend/devops-environment/package.json
+++ b/src/frontend/devops-environment/package.json
@@ -6,6 +6,7 @@
     "brace": "^0.10.0",
     "clipboard": "^1.7.1",
     "vee-validate": "^2.0.3",
+    "vue": "2.6.12",
     "vue-echarts": "^3.0.9",
     "vue-file-upload": "^0.1.12",
     "vuex-class": "^0.3.0"
