--- a/src/frontend/devops-gitci/package.json
+++ b/src/frontend/devops-gitci/package.json
@@ -88,7 +88,7 @@
     "copy-webpack-plugin": "~5.0.3",
     "cross-env": "~5.2.0",
     "css-loader": "~2.1.1",
-    "eslint": "~5.16.0",
+    "eslint": "7.3.1",
     "eslint-config-standard": "~12.0.0",
     "eslint-friendly-formatter": "~4.0.1",
     "eslint-loader": "~2.1.2",
