--- a/src/frontend/devops-quality/package.json
+++ b/src/frontend/devops-quality/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.1",
   "description": "",
   "dependencies": {
+    "vue": "2.6.12",
     "vue-echarts": "^3.0.9",
     "vue-property-decorator": "^6.0.0",
     "vue-template-compiler": "2.6.12",
