--- a/.ci/frontend_dev.yml
+++ b/.ci/frontend_dev.yml
@@ -1,12 +1,13 @@
 version: "v2.0"
 name: "bk-ci前端部署【Dev】"
 variables:
-  modules: "nav,pipeline,vs,ticket,codelib,quality,turbo,atomstore,artifactory,environment,experience"
+  modules: "nav,pipeline,vs,ticket,codelib,quality,turbo,atomstore,artifactory,environment,experience,stream"
   branch: "frontend-develop"
   path: "default"
   ips: "11.185.144.156,9.4.20.15"
 
 on:
+  push: [ "frontend-master" ]
   schedules:
     cron: 0 * * * *
     branches: [ "frontend-develop" ]
