refactor: 升级babel 7 issue #5292

--- a/src/frontend/.babelrc
+++ b/src/frontend/.babelrc
@@ -3,6 +3,7 @@
     [
       "@babel/preset-env",
       {
+        "modules": "commonjs",
         "debug": false,
         "useBuiltIns": "usage"
       }
