--- a/.ci/frontend_test.yml
+++ b/.ci/frontend_test.yml
@@ -6,6 +6,7 @@ variables:
   # 9.134.78.69,10.123.135.151,9.66.32.218
 
 on:
+  push: ["frontend-master"]
   schedules:
     cron: 0 * * * *
     branches: [ "test" ]
@@ -24,11 +25,11 @@ stages:
         with:
           refName: test
       - name: "拉取前端占位符"
+        checkout: "http://git.code.oa.com/bkdevops/devops-config.git"
         with:
           pullType: "BRANCH"
-          branchName: "integration"
+          refName: "integration"
           localPath: "devops-config"
-        checkout: "http://git.code.oa.com/bkdevops/devops-config.git"
       - uses: calculatehash@1.*
         id: calculate
         with:
