--- a/src/frontend/.babelrc
+++ b/src/frontend/.babelrc
@@ -1,11 +1,7 @@
 {
   "presets": [
     [
-      "@babel/preset-env",
-      {
-        "modules": "commonjs",
-        "debug": false
-      }
+      "@babel/preset-env"
     ]
   ],
   "plugins": [
