modify frontend yml

--- a/.ci/frontend_test.yml
+++ b/.ci/frontend_test.yml
@@ -6,6 +6,7 @@ variables:
   # 9.134.78.69,10.123.135.151,9.66.32.218
 
 on:
+  push: ["frontend-master"]
   schedules:
     cron: 0 * * * *
     branches: [ "test" ]
@@ -33,13 +34,30 @@ stages:
         id: calculate
         with:
           file_path: src/frontend/package.json
+            # src/frontend/devops-nav/package.json
+            # src/frontend/devops-pipeline/package.json
+            # src/frontend/devops-atomstore/package.json
+            # src/frontend/devops-codelib/package.json
+            # src/frontend/devops-environment/package.json
+            # src/frontend/devops-quality/package.json
+            # src/frontend/devops-experience/package.json
+            # src/frontend/devops-turbo/package.json
           calculate_func: md5
       - uses: cache@1.*
         id: cache
         with:
-          cacheKey: "bk_ci_frontend_${{ steps.calculate.outputs.hash_value }}"
-          cachePaths: "src/frontend/node_modules"
-          restoreKeys: "bk_ci_frontend_"
+          cacheKey: "bk_ci_frontend_test_linux_${{ steps.calculate.outputs.hash_value }}"
+          cachePaths: |
+            src/frontend/node_modules
+            src/frontend/devops-nav/node_modules
+            src/frontend/devops-pipeline/node_modules
+            src/frontend/devops-atomstore/node_modules
+            src/frontend/devops-codelib/node_modules
+            src/frontend/devops-environment/node_modules
+            src/frontend/devops-quality/node_modules
+            src/frontend/devops-experience/node_modules
+            src/frontend/devops-turbo/node_modules
+          restoreKeys: "bk_ci_frontend_test_linux_"
       - run: |
           cd src/frontend
           if [ ${{ steps.cache.outputs.cacheHit }} == 'false' ]
