--- a/src/frontend/devops-stream/package.json
+++ b/src/frontend/devops-stream/package.json
@@ -48,7 +48,7 @@
   "dependencies": {
     "@blueking/log": "1.1.9",
     "@blueking/user-selector": "^1.0.6",
-    "@icon-cool/bk-icon-stream": "0.0.2",
+    "@icon-cool/bk-icon-stream": "0.0.3",
     "axios": "~0.18.0",
     "bk-magic-vue": "^2.3.0",
     "codemirror": "^5.61.0",
@@ -64,7 +64,7 @@
     "xterm": "^3.1.0"
   },
   "devDependencies": {
-    "@babel/core": "~7.4.5",
+    "@babel/core": "~7.13.16",
     "@babel/node": "~7.4.5",
     "@babel/plugin-proposal-decorators": "~7.4.4",
     "@babel/plugin-proposal-export-namespace-from": "~7.2.0",
@@ -78,8 +78,10 @@
     "@babel/preset-env": "~7.4.5",
     "@babel/register": "~7.4.4",
     "@babel/runtime": "~7.4.5",
+    "@babel/eslint-parser": "^7.14.3",
+    "@vue/eslint-config-standard": "~6.1.0",
+    "@vue/eslint-config-typescript": "~7.0.0",
     "babel-core": "^7.0.0-bridge.0",
-    "babel-eslint": "~10.0.1",
     "babel-loader": "~8.0.6",
     "babel-plugin-istanbul": "~5.1.4",
     "babel-plugin-lodash": "~3.3.4",
@@ -93,15 +95,12 @@
     "copy-webpack-plugin": "~5.0.3",
     "cross-env": "~5.2.0",
     "css-loader": "~2.1.1",
-    "eslint": "~5.16.0",
-    "eslint-config-standard": "~12.0.0",
-    "eslint-friendly-formatter": "~4.0.1",
-    "eslint-loader": "~2.1.2",
-    "eslint-plugin-import": "~2.17.2",
-    "eslint-plugin-node": "~9.0.1",
-    "eslint-plugin-promise": "~4.1.1",
-    "eslint-plugin-standard": "~4.0.0",
-    "eslint-plugin-vue": "~5.2.2",
+    "eslint": "^7.27.0",
+    "eslint-plugin-import": "^2.23.3",
+    "eslint-plugin-node": "~11.1.0",
+    "eslint-plugin-promise": "~5.1.0",
+    "eslint-plugin-standard": "~4.0.1",
+    "eslint-plugin-vue": "^7.15.1",
     "eventsource-polyfill": "~0.9.6",
     "express": "~4.17.0",
     "faker": "~4.1.0",
