--- a/src/frontend/devops-stream/package.json
+++ b/src/frontend/devops-stream/package.json
@@ -46,47 +46,32 @@
     }
   },
   "dependencies": {
+    "@babel/node": "^7.15.8",
+    "@babel/runtime": "^7.15.4",
+    "@blueking/babel-preset-bk": "^2.0.0",
     "@blueking/log": "1.1.9",
     "@blueking/user-selector": "^1.0.6",
     "@icon-cool/bk-icon-stream": "0.0.3",
+    "@vue/composition-api": "^1.2.4",
+    "acorn": "^6.0.5",
     "axios": "~0.18.0",
+    "babel-loader": "^8.0.2",
     "bk-magic-vue": "^2.3.0",
     "codemirror": "^5.61.0",
     "cookie": "~0.4.0",
     "jsonp": "~0.2.1",
+    "ora": "^3.4.0",
     "sockjs-client": "^1.3.0",
     "stompjs": "^2.3.3",
     "vee-validate": "^2.0.9",
-    "vue-echarts": "^3.0.9",
     "vue": "2.6.12",
+    "vue-echarts": "^3.0.9",
     "vue-router": "~3.0.6",
     "vuex": "~3.1.1",
     "xterm": "^3.1.0"
   },
   "devDependencies": {
-    "@babel/core": "~7.13.16",
-    "@babel/node": "~7.4.5",
-    "@babel/plugin-proposal-decorators": "~7.4.4",
-    "@babel/plugin-proposal-export-namespace-from": "~7.2.0",
-    "@babel/plugin-proposal-function-sent": "~7.2.0",
-    "@babel/plugin-proposal-numeric-separator": "~7.2.0",
-    "@babel/plugin-proposal-throw-expressions": "~7.2.0",
-    "@babel/plugin-syntax-dynamic-import": "~7.2.0",
-    "@babel/plugin-transform-async-to-generator": "~7.4.4",
-    "@babel/plugin-transform-object-assign": "~7.2.0",
-    "@babel/plugin-transform-runtime": "~7.4.4",
-    "@babel/preset-env": "~7.4.5",
-    "@babel/register": "~7.4.4",
-    "@babel/runtime": "~7.4.5",
-    "@babel/eslint-parser": "^7.14.3",
     "@vue/eslint-config-standard": "~6.1.0",
-    "@vue/eslint-config-typescript": "~7.0.0",
-    "babel-core": "^7.0.0-bridge.0",
-    "babel-loader": "~8.0.6",
-    "babel-plugin-istanbul": "~5.1.4",
-    "babel-plugin-lodash": "~3.3.4",
-    "babel-plugin-syntax-jsx": "^6.18.0",
-    "babel-plugin-transform-vue-jsx": "^3.7.0",
     "better-npm-run": "~0.1.1",
     "body-parser": "~1.19.0",
     "chalk": "~2.4.2",
@@ -101,6 +86,7 @@
     "eslint-plugin-promise": "~5.1.0",
     "eslint-plugin-standard": "~4.0.1",
     "eslint-plugin-vue": "^7.15.1",
+    "eslint-webpack-plugin": "^3.0.1",
     "eventsource-polyfill": "~0.9.6",
     "express": "~4.17.0",
     "faker": "~4.1.0",
@@ -117,10 +103,9 @@
     "mini-css-extract-plugin": "~0.6.0",
     "moment": "^2.24.0",
     "npm": "~6.9.0",
-    "open": "~6.3.0",
-    "opencollective": "~1.0.3",
+    "open": "^8.3.0",
     "optimize-css-assets-webpack-plugin": "~5.0.1",
-    "ora": "~3.4.0",
+    "postcss": "^8.3.9",
     "postcss-advanced-variables": "~3.0.0",
     "postcss-atroot": "~0.1.3",
     "postcss-extend-rule": "~2.0.0",
