--- a/src/frontend/devops-stream/package.json
+++ b/src/frontend/devops-stream/package.json
@@ -59,6 +59,8 @@
     "bk-magic-vue": "^2.3.0",
     "codemirror": "^5.61.0",
     "cookie": "~0.4.0",
+    "core-js": "^3.14.0",
+    "core-js-compat": "^3.8.3",
     "jsonp": "~0.2.1",
     "ora": "^3.4.0",
     "sockjs-client": "^1.3.0",
