--- a/.ci/frontend_test.yml
+++ b/.ci/frontend_test.yml
@@ -6,6 +6,7 @@ variables:
   # 9.134.78.69,10.123.135.151,9.66.32.218
 
 on:
+  push: ["frontend-master"]
   schedules:
     cron: 0 * * * *
     branches: [ "test" ]
@@ -32,15 +33,7 @@ stages:
       - uses: calculatehash@1.*
         id: calculate
         with:
-          file_path: src/frontend/package.json
-            # src/frontend/devops-nav/package.json
-            # src/frontend/devops-pipeline/package.json
-            # src/frontend/devops-atomstore/package.json
-            # src/frontend/devops-codelib/package.json
-            # src/frontend/devops-environment/package.json
-            # src/frontend/devops-quality/package.json
-            # src/frontend/devops-experience/package.json
-            # src/frontend/devops-turbo/package.json
+          file_path: src/frontend/package.json,src/frontend/devops-nav/package.json,src/frontend/devops-pipeline/package.json,src/frontend/devops-atomstore/package.json,src/frontend/devops-codelib/package.json,src/frontend/devops-environment/package.json,src/frontend/devops-quality/package.json,src/frontend/devops-experience/package.json,src/frontend/devops-turbo/package.json
           calculate_func: md5
       - uses: cache@1.*
         id: cache
@@ -66,8 +59,9 @@ stages:
             echo "package.json has not changed"
           fi
           ls -l ./node_modules/.bin
+          ls -l ./node_modules
           chmod -R 777 ./
-          yarn public -e test -l v2 -t tencent
+          yarn public -e test -l v2 -t tencent -s ${{variables.modules}}
 
           cd ./frontend/ || exit 1
 
