--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -1,7 +1,24 @@
 {
   "name": "root",
   "private": true,
-  "devDependencies": {
+  "devDependencies": { 
+    "core-js": "^3.19.1",
+    "@babel/cli": "^7.15.7",
+    "@babel/core": "^7.15.8",
+    "@babel/eslint-parser": "^7.15.8",
+    "@babel/plugin-proposal-class-properties": "^7.14.5",
+    "@babel/plugin-proposal-decorators": "^7.15.8",
+    "@babel/plugin-proposal-export-namespace-from": "^7.14.5",
+    "@babel/plugin-proposal-function-sent": "^7.14.5",
+    "@babel/plugin-proposal-json-strings": "^7.14.5",
+    "@babel/plugin-proposal-numeric-separator": "^7.14.5",
+    "@babel/plugin-proposal-throw-expressions": "^7.14.5",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-syntax-import-meta": "^7.10.4",
+    "@babel/plugin-syntax-jsx": "^7.14.5",
+    "@babel/plugin-transform-object-assign": "^7.14.5",
+    "@babel/plugin-transform-runtime": "^7.15.8",
+    "@babel/preset-env": "^7.15.8",
     "@commitlint/cli": "^9.1.1",
     "@commitlint/config-conventional": "^9.1.1",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
@@ -17,10 +34,10 @@
     "node-fetch": "^2.6.0",
     "ora": "^3.4.0",
     "svg-sprite-loader": "^6.0.9",
-    "@babel/eslint-parser": "^7.15.8",
     "webpack-bundle-analyzer": "^4.4.2",
     "webpack-cli": "^4.9.0",
     "webpack-dev-server": "^4.3.1"
+    
   },
   "scripts": {
     "start": "lerna bootstrap",
