--- a/src/frontend/devops-pipeline/package.json
+++ b/src/frontend/devops-pipeline/package.json
@@ -31,7 +31,10 @@
     "vue-json-viewer": "^2.2.5",
     "vue-router": "^2.8.1",
     "vuedraggable": "^2.16.0",
-    "vuex": "^2.4.0"
+    "vuex": "^2.4.0",
+    "xterm": "^4.15.0",
+    "xterm-addon-attach": "^0.6.0",
+    "xterm-addon-fit": "^0.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.15.8",
