--- a/src/frontend/devops-stream/package.json
+++ b/src/frontend/devops-stream/package.json
@@ -53,6 +53,7 @@
     "@blueking/user-selector": "^1.0.6",
     "@icon-cool/bk-icon-stream": "0.0.4",
     "@vue/composition-api": "^1.2.4",
+    "@vue/babel-preset-jsx": "^1.2.4",
     "acorn": "^6.0.5",
     "axios": "~0.18.0",
     "babel-loader": "^8.0.2",
