feat: apk/ipa支持二维码扫码下载 --story=869823249

--- a/src/frontend/devops-stream/.gitignore
+++ b/src/frontend/devops-stream/.gitignore
@@ -75,5 +75,7 @@ test/unit/coverage
 *.sln
 /webpack_cache
 
-/src/conf/selfsigned.crt
-/src/conf/selfsigned.key
+/src/conf/*.crt
+/src/conf/*.key
+
+/src/conf/*.pem
