--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -2,16 +2,17 @@
   "name": "root",
   "private": true,
   "devDependencies": {
-    "gulp": "^4.0.2",
-    "lerna": "3.17.0",
-    "chalk": "^4.0.0",
-    "gulp-rename": "^1.4.0",
-    "node-fetch": "^2.6.0",
-    "ora": "^3.4.0",
-    "husky": "^3.0.7",
-    "lint-staged": "^10.2.11",
     "@commitlint/cli": "^9.1.1",
-    "@commitlint/config-conventional": "^9.1.1"
+    "@commitlint/config-conventional": "^9.1.1",
+    "chalk": "^4.0.0",
+    "gulp": "^4.0.2",
+    "gulp-rename": "^1.4.0",
+    "husky": "^3.0.7",
+    "lerna": "3.17.0",
+    "lint-staged": "^10.2.11",
+    "node-fetch": "^2.6.0",
+    "babel-eslint": "^10.1.0",
+    "ora": "^3.4.0"
   },
   "scripts": {
     "start": "lerna bootstrap",
